<resources>
    <string name="app_name">Open Classrooms NYT App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="search_results">Search Results</string>
    <string name="tvSection">Section</string>
    <string name="tvDate">Date</string>
    <string name="tvHeadline">Headline</string>
    <string name="menuNotification">Notifications</string>
    <string name="menuHelp">Help</string>
    <string name="menuAbout">About</string>
    <string name="menuSearch">Search</string>
    <string name="menuBack">Back</string>
    <string name="tvAbout">This app was created by Mark Norton for Open Classrooms Module 7 entitled, "Stay Up To Date With The News."\n\n  The app utilizes the New York Times API to find news articles in categories and has the capabilities of searching articles by keyword, date, and category.\n\n  All rights to this app and its codebase are created by Mark Norton and all rights are reserved under USA Copyright Law.</string>
    <string name="tvHelp">This app was created by Mark Norton for Open Classrooms Module 7 entitled, "Stay Up To Date With The News."\n\n  If you have any questions or comments on this app, or need any help, please reach out by sending an email to marknort@hotmail.com</string>
    <string name="tvNotification">Notifications</string>
    <string name="etSearch">Search Query Term</string>
    <string name="cbArt">Art</string>
    <string name="cbBusiness">Business</string>
    <string name="cbEntrepreneurs">Entrepreneurs</string>
    <string name="cbPolitics">Politics</string>
    <string name="cbSports">Sports</string>
    <string name="cbTravel">Travel</string>
    <string name="tvNotificationDescription">Enable Notifications (Once Per Day) \t</string>
    <string name="sDate">Selected item:</string>
    <string name="eDate">Selected item:</string>
    <string name="buSearch">Search</string>
    <string name="beginTextView">Begin Date</string>
    <string name="endDate">End Date</string>
    <string name="menu_home">Home</string>
    <string name="notification_channel_name">NYT Article Notification</string>
    <string name="notification_channel_description">NYTChannel</string>
    <string name="update_me">Update Me!</string>
    <string name="update">Click To View Article</string>
    <string name="notification_title">NYT Article Notification</string>
    <string name="notification_text">You have an article to read that matches your notification settings!</string>
    <string name="channelId">NYT Alarm</string>
    <string name="channelDescription">You have unseen articles that match your search.</string>
    <string name="ivDescription">Image View</string>
    <string name="tvSubSection">SubSection</string>
    <string name="topStories">Top Stories</string>
    <string name="mostPopular">Most Popular</string>
    <string name="technology">Technology</string>
    <string name="notification">notification</string>
    <string name="chooseOne">You MUST choose at least 1 Category and Search Term</string>
</resources>
